<?xml version="1.0" encoding="utf-8"?>
<!-- outermost layer -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="7dp"
    android:layout_marginRight="7dp"
    android:layout_marginTop="3dp"
    android:layout_marginBottom="3dp">
    <!-- day information -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="3dp">
        <TextView
            android:id="@+id/test"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/blank"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_mon"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_tue"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_wed"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_thu"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_fri"
            />
    </LinearLayout>

    <!-- timetable scrollable -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="3dp">

        <!-- where timetable is placed -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <!-- timetable timeRow -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/timeLayout"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/time1"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/time2"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/time3"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/time4"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/time5"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/time6"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/time7"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/time8"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/time9"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/time10"
                    />
            </LinearLayout><!--
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="test"/>
            </LinearLayout>-->
            <!--
            <GridLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:rowCount="9"
                android:columnCount="5"
                >

                <TextView
                    android:text="test"
                    android:layout_column="1"
                    android:layout_row="1"
                    />
                <TextView
                    android:text="test"
                    android:layout_column="1"
                    android:layout_row="2"/>
                <TextView
                    android:text="test"
                    android:layout_column="2"
                    android:layout_row="1"
                    />
                <TextView
                    android:layout_column="4"
                    android:layout_row="8"
                    android:text="test"
                    />

            </GridLayout>
            -->
            <GridView
                android:id="@+id/tableGrid"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:numColumns="5"
                android:stretchMode="columnWidth"
                android:verticalSpacing="45dp"
                >
            </GridView>
        </LinearLayout>
    </ScrollView>
    <!-- where buttons are located -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="7"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        >
        <Button
            android:id="@+id/editButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/delButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>